--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
                 <a class="navbar-brand" href="#"><img src="image/asset 0.svg" alt=""></a>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 fs-5 mx-5 px-3 gap-5">
                     <li class="nav-item ">
-                        <a class="nav-link" href="#">home</a>
+                        <a class="nav-link" href="#home-section">home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">about</a>
+                        <a class="nav-link" href="#about-section">about</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">course</a>
+                        <a class="nav-link" href="#course-section">course</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">contect</a>
+                        <a class="nav-link" href="#contect-section">contect</a>
                     </li>
 
                 </ul>
@@ -55,7 +55,7 @@
 
 
     <!--banner-section  -->
-    <section class="banner-section py-5 mb-5">
+    <section class="banner-section py-5 mb-5" id="home-section">
         <div class="container py-5">
             <div class="row py-5 d-flex justify-content-between align-items-center">
                 <div class="col-lg-6 col-12 content-section">
@@ -75,7 +75,7 @@
 
 
     <!-- categories section -->
-    <section class="categories-section mt-5">
+    <section class="categories-section mt-5" id="about-section">
         <div class="container pt-5">
             <div class="row pb-3">
                 <div class="col-12 text-center">
@@ -132,7 +132,7 @@
 
 
     <!-- course-section -->
-    <section class="course-section mt-5 py-5">
+    <section class="course-section mt-5 py-5" id="course-section">
         <div class="container py-5">
             <div class="row py-5">
                 <div class="col-12 text-center">
@@ -211,11 +211,11 @@
 
 
     <!-- footer-section -->
-    <section class="footer-section py-5">
+    <section class="footer-section py-5" id="contect-section">
         <div class="container pt-5">
             <div class="row">
                 <div class="col-lg-3 col-12 mb-5">
-                    <img src="image/asset 0.svg" alt="">
+                    <img src="image/asset 24.svg" alt="">
                     <p class="mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores molestias,
                         eaque expedita incidunt quia laudantium?</p>
                     <p>Add : Near Police station dhalwala rishikesh </p>
@@ -251,11 +251,16 @@
                         <input type="email" class="py-2 px-2 w-50 rounded " placeholder="your email">
                         <button class="py-2 px-1 text-capitalize  rounded">subscribe</button>
                     </form>
-                    <i class="fa-brands fa-facebook my-5 pe-4 fa-xl" style="color:#fff"></i>
-                    <i class="fa-brands fa-linkedin pe-4 fa-xl" style="color:#fff"></i>
-                    <i class="fa-brands fa-instagram pe-4 fa-xl" style="color:#fff"></i>
-                    <i class="fa-brands fa-twitter pe-4 fa-xl" style="color:#fff"></i>
-                    <i class="fa-brands fa-youtube fa-xl" style="color:#fff"></i>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook my-5 pe-4 fa-xl"
+                            style="color:#fff"></i></a>
+                    <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin pe-4 fa-xl"
+                            style="color:#fff"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"> <i class="fa-brands fa-instagram pe-4 fa-xl"
+                            style="color:#fff"></i></a>
+                    <a href="https://twitter.com/" target="_blank"> <i class="fa-brands fa-twitter pe-4 fa-xl"
+                            style="color:#fff"></i></a>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube fa-xl"
+                            style="color:#fff"></i></a>
                 </div>
             </div>
         </div>
