--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- header-section -->
     <nav class="navbar navbar-expand-lg py-3 position-fixed w-100 shadow">
         <div class="container">
-            <button class="navbar-toggler p-1 border-0 outline-0 " type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler p-1 border-0 my-3" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
